privacy added & klaviyo

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,6 +43,7 @@ const ogImage = logoSrc.startsWith('http') ? logoSrc : `${siteUrl}${logoSrc}`;
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
     />
+    <script defer src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=T7LKGL"></script>
 
     <!-- Shopify SDK (kept) -->
     <script src="https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js"></script>
